--- a/src/components/Flights/BookFlight/BookFlight.css
+++ b/src/components/Flights/BookFlight/BookFlight.css
@@ -167,21 +167,48 @@
   border: 1px solid #ccc;
 }
 
+header h2 {
+  color: rgb(34, 101, 78);
+}
 
 html label {
     font-family: 'Montserrat', sans-serif;;
 }
+ .flight-form label {
+    padding-right:15rem;
+  }
 
-label {
-    
-    margin-right: 10rem;
+
+#confirm-btn {
+  margin-top: 1rem;
+  height: 38px;
+  width: 360px;
+  background-color: antiquewhite;
+  border: none;
+  border-radius: 8px;
+  font-weight: 600;
+
+}
+#confirm-btn:hover {
+  background-color: rgb(100, 68, 25);
+  color: antiquewhite;
+}
+
+form h5 {
+  margin-right: 9rem;
 }
 
 
-@media(max-width:760px){
+@media(max-width:770px){
   .flight-form input {
-    width: 230px;
+    width: 360px;
+    
   }
+   .flight-form label {
+    padding-right: 14rem;
+  }
+
+
 
   .flight-form h4 {
     display: none;
@@ -196,7 +223,7 @@ label {
     grid-template-rows: auto;
     justify-content: center;
     gap: clamp(0.1rem ,2.5rem ,2.5rem);
-    margin-top: 7vh;
+    margin-top: 3vh;
     padding-top: -2rem;
     max-width: 100%;
     height: 40vh;
@@ -218,7 +245,7 @@ label {
     grid-template-rows: 1fr 1fr ;
     gap: 1rem;
    
-    margin-top: 20vh;
+    margin-top: -15vh;
     padding-top: -2rem;
     max-width: 100%;
     height: 70vh;
@@ -242,6 +269,7 @@ label {
 @media(max-width:540px){
     
      .footer-container-b {
+        margin-top: 10vh;
         height: 60vh;
         padding-top: 2rem;
         padding-bottom: 1rem;
@@ -250,5 +278,9 @@ label {
         grid-template-columns: 1fr 1fr   ;
        
     }
-
+    header h2 {
+      text-align: center;
+      padding-left: 2rem;
+      font-size: 1.3rem;
+    }
 }
