--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -65,14 +65,14 @@ header h4 {
 }
 
 .form-container-signup {
-  background-color: rgba(250, 250, 250, 0.977);
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
   border-radius: 8px;
-  width: 80%;
-  max-width: 700px;
+  width: 90%;
+  max-width: 750px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 3;
 }
@@ -111,25 +111,19 @@ header h4 {
 }
 
 .item3 {
-  background-color: rgb(248, 248, 248);
   margin-top: 1.5rem;
   text-align: center;
 }
 
-.item3 h5 {
-  margin-top: 1rem;
-  font-size: 1rem;
-}
-
-.item-text h5{
+.item-text h5{ 
   color: rgb(11, 6, 6);
 }
 
 
 #login-btn {
-  width: 120%;
+  width: 300px;
   height: 40px;
-  margin-left: -1.3rem;    
+  margin-left: 0rem;    
   background-color: antiquewhite;
   border: none;
   border-radius: 6px;
@@ -143,10 +137,17 @@ header h4 {
   color: antiquewhite;
 }
 
+#login {
+  color: rgb(62, 99, 97);
+  margin-right: 5rem;
+  margin-top: 1rem;
+}
+
 @media (max-width: 800px) {
   .form-container-login {
     width: 70%;
     padding: 1rem;
+    text-align: right;
   }
 
   .item2 input {
@@ -178,24 +179,17 @@ header h4 {
 }
 
 @media(max-width:466px){
-  
+   #login  {
+     padding-left: 3rem;
+     width: 90vw;
+     
+   }
   #login-btn {
-    width: 100%;
+    width: 230px;
     margin-left: 0rem;
   }
+
 
 }
 
-@media (max-width:360px){
 
-  .item3 {
-    position: relative;
-    margin-left: 0rem;
-  }
-  
-    /* header h1 {
-      margin-right: 1rem;
-      font-size: 1.4rem;
-    } */
- 
-} 
