--- a/src/components/Signup/SignUp.css
+++ b/src/components/Signup/SignUp.css
@@ -40,6 +40,7 @@ a {
 }
 
 #item1 {
+  
   position: relative;
 
 }
@@ -54,7 +55,7 @@ header h4 {
 }
 
 .form-container-signup {
-  background-color: rgba(250, 250, 250, 0.977);
+  background-color: rgba(255, 255, 255, 0.384);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,27 +101,16 @@ header h4 {
 }
 
 .item3 {
-  background-color: rgb(248, 248, 248);
   margin-top: 1.5rem;
   text-align: center;
 }
 
-.item3 h5 {
-  margin-top: 1rem;
-  font-size: 1rem;
-}
-
-.item-text h5{
-  color: rgb(11, 6, 6);
-}
-
-
 .sign-btn {
-  width: 100%;
+  width: 300px;
   height: 40px;
     max-width: 300px;       
   min-width: 180px;  
-  background-color: antiquewhite;
+  background-color: rgb(253, 232, 204);
   border: none;
   border-radius: 6px;
   font-weight: bold;
@@ -133,14 +123,19 @@ header h4 {
   color: antiquewhite;
 }
 
+#account {
+  padding-left: 5rem;
+  font-size: 1rem;
+}
+
 @media (max-width: 800px) {
   .form-container-signup {
-    width: 70%;
+    width: 80%;
     padding: 1rem;
   }
 
   .sign-btn {
-    width: 60%;
+    width: 70%;
   }
 
   .item2 input {
@@ -149,7 +144,7 @@ header h4 {
 
   header h1 {
     font-size: 2rem;
-    padding-right: 15rem;
+  
   }
 
   header h4 {
@@ -159,54 +154,31 @@ header h4 {
   
 }
 
+@media(max-width:770px){
+  #item1 h1 {
+    padding-right: 12rem;
+  }
+  .sign-btn {
+    width: 300px;
+  }
+}
+
 @media (max-width:400px){
+  #item1 h1 {
+    padding-right: 13rem;
+  }
   .item2 {
    position: absolute;
    margin-top: 33px;
   }
-  header h4 {
-    display: none;
-  }
-     
-    header h1 {
-      margin-right: 32rem;
-      font-size: 36px;
-    }
-
     .sign-btn {
-      width: 50%;
-    }
- 
+      width: 70%;
 
-}
+    }    
 
-@media (max-width:400px){
-  .item2 {
-   position: relative;
-   margin-top: 35px;
+  #account {
+    padding-left: 24.5rem;
+    font-size: 0.7rem;
+    width: 60rem;
   }
-      
-
-  .item2  input{
-  position: relative;
-  border-radius: 5px;
-  border: 1px solid rgb(69, 135, 130); 
-  height: 33px;
-  width: 150px;
-    
-  }
-  .item3 {
-    position: relative;
-    margin-left: 2rem;
-  }
-   .sign-btn {
-     width: 130px;
-     
-    }
-     
-    header h1 {
-      margin-right: 1rem;
-      font-size: 1.4rem;
-    }
- 
 }
