--- a/src/components/Signup/SignUp.css
+++ b/src/components/Signup/SignUp.css
@@ -124,7 +124,7 @@ header h4 {
 }
 
 #account {
-  padding-left: 5rem;
+  padding-left: 10rem;
   font-size: 1rem;
 }
 
@@ -161,6 +161,12 @@ header h4 {
   .sign-btn {
     width: 300px;
   }
+  
+  #account {
+    padding-left: 31.7rem;
+    font-size: 1rem;
+    width: 70rem;
+  }
 }
 
 @media (max-width:400px){
@@ -177,7 +183,7 @@ header h4 {
     }    
 
   #account {
-    padding-left: 24.5rem;
+    padding-left: 28.7rem;
     font-size: 0.7rem;
     width: 60rem;
   }
